--- a/pages/taller.html
+++ b/pages/taller.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Taller Programación</title>
+    <link rel="icon" href="assets/images/logo.png" type="image/png">
 </head>
 <body>
     <div class="px-3 py-4 min-h-screen bg-sky-100 max-w-md mx-auto">
