--- a/pages/ingles.html
+++ b/pages/ingles.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Inglés III</title>
+    <link rel="icon" href="assets/images/logo.png" type="image/png">
 </head>
 
 <body>
