--- a/pages/probabilidad.html
+++ b/pages/probabilidad.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Probabilidad y Estadística</title>
+    <link rel="icon" href="assets/images/logo.png" type="image/png">
 </head>
 
 <body>
